@@ -1,6 +1,8 @@
 2010-08-11  Asa Ayers  <Asa.Ayers@Gmail.com>
 
 - Fixed an issue where trading an item and gold in exchange for a different item was not considering the gold in the price of the new item.
+- Fixed a bug where postage was being counted more than once if you send mail and then open mail in the same session.
+- Added a warning when sending items with value to characters on other accounts.
 
 2010-08-10  Asa Ayers  <Asa.Ayers@Gmail.com>
 
